# lsmp3

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: cmp.rs  info.rs  lib.rs  list.rs  main.rs
src/ls/: cmp.rs  error.rs  info.rs  list.rs  mod.rs
testdata/: most_tags
tests/: lsmp3.rs
