[package]
name = "lsmp3"
description = "List MP3s with title, artist, album, year, track and genre metadata."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
id3 = "1.2.0"
itertools = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.7.0"
