[package]
name = "lsmp3"
description = "List MP3s with title, artist, album, year, track and genre metadata."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
id3 = "1"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.8"
walkdir = "2"
